[package]
name = "variational-regression"
version = "0.1.0"
authors = ["Benjamin Harrison <benjamin.jt.harrison@gmail.com>"]
description = "Regression models trained using variational inference"
keywords = ["regression-models", "linear-regression", "logistic-regression", "bayesian-inference", "machine-learning"]
homepage = "https://github.com/benjarison/variational-regression"
repository = "https://github.com/benjarison/variational-regression"
documentation = "https://docs.rs/variational-regression"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
special = "0.8.1"
nalgebra = {version = "0.29.0", features = ["serde-serialize"]}
serde = {version = "1", features = ["derive"]}
assert_approx_eq = "1.1.0"
